--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "description": "QuickStart package.json from the documentation for visual studio 2017 & WebApi",
   "scripts": {
-    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-    "lint": "tslint ./app/**/*.ts -t verbose",
-    "lite": "lite-server",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "build:prod": "webpack --config config/webpack.prod.js --colors --progress",
+    "build": "webpack --progress --colors"
   },
   "keywords": [],
   "author": "",
@@ -22,25 +19,24 @@
     "@angular/platform-browser": "^4.1.2",
     "@angular/platform-browser-dynamic": "^4.1.2",
     "@angular/router": "^4.1.2",
-
-    "bootstrap": "^3.3.7",
+    
     "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
     "rxjs": "^5.4.0",
-    "systemjs": "0.19.40",
     "zone.js": "^0.8.11"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.0.10",
-
-    "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
-    "protractor": "~4.0.14",
-
-    "@types/node": "^6.0.46"
-  },
-  "repository": {}
+    "@types/node": "^6.0.46",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.18.1",
+    "typescript": "~2.3.4",
+    "webpack": "^2.6.1",
+    "webpack-merge": "^4.1.0"
+  }
 }
