--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -4,36 +4,38 @@
   "description": "QuickStart package.json from the documentation for visual studio 2017 & WebApi",
   "scripts": {
     "build:prod": "webpack --config config/webpack.prod.js --colors --progress",
-    "build": "webpack --progress --colors"
+    "build": "webpack --colors",
+    "typings": "typings install"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "4.1.2",
-    "@angular/common": "^4.1.2",
-    "@angular/compiler": "^4.1.2",
-    "@angular/core": "^4.1.2",
-    "@angular/forms": "^4.1.2",
-    "@angular/http": "^4.1.2",
-    "@angular/platform-browser": "^4.1.2",
-    "@angular/platform-browser-dynamic": "^4.1.2",
-    "@angular/router": "^4.1.2",
-    
+    "@angular/animations": "4.1.3",
+    "@angular/common": "^4.1.3",
+    "@angular/compiler": "^4.1.3",
+    "@angular/core": "^4.1.3",
+    "@angular/forms": "^4.1.3",
+    "@angular/http": "^4.1.3",
+    "@angular/platform-browser": "^4.1.3",
+    "@angular/platform-browser-dynamic": "^4.1.3",
+    "@angular/router": "^4.1.3",
+
     "core-js": "^2.4.1",
     "rxjs": "^5.4.0",
-    "zone.js": "^0.8.11"
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
     "@types/node": "^6.0.46",
+    "@types/core-js": "^0.9.41",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
     "raw-loader": "^0.5.1",
+    "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
     "typescript": "~2.3.4",
     "webpack": "^2.6.1",
