--- a/Angular2webapp/Angular2webapp/tsconfig.json
+++ b/Angular2webapp/Angular2webapp/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "types": [ "node" ],
+    "typeRoots": [ "node_modules/@types" ],
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": [ "es2015", "dom" ],
+    "lib": [ "es5", "es2015", "dom", "es2015.promise" ],
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true
   }
