--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^4.1.3",
     "@angular/router": "^4.1.3",
 
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "jquery": "1.12.4",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.12"
   },
