--- a/Angular2webapp/Angular2webapp/Web.config
+++ b/Angular2webapp/Angular2webapp/Web.config
@@ -24,6 +24,22 @@
       <remove name="TRACEVerbHandler"/>
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
+    <rewrite>
+      <rules>
+        <rule name="WebApi Routes" stopProcessing="true">
+          <match url="^api/" />
+          <action type="None" />
+        </rule>
+        <rule name="Angular Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
