--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "4.1.3",
     "@angular/common": "^4.1.3",
     "@angular/compiler": "^4.1.3",
     "@angular/core": "^4.1.3",
@@ -24,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "1.12.4",
+    "moment": "^2.18.1",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.12"
   },
