--- a/Angular2webapp/Angular2webapp/Web.config
+++ b/Angular2webapp/Angular2webapp/Web.config
@@ -38,6 +38,19 @@
           </conditions>
           <action type="Rewrite" url="/" />
         </rule>
+        <!--<rule name="Serve Angular app from root" stopProcessing="true">
+          <match url="([\w\.]+)" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" />
+          </conditions>       
+          <action type="Rewrite" url="/{R:1}" />
+        </rule>
+        <rule name="Default document" stopProcessing="true">
+          <match url="^$" />
+          <action type="Rewrite" url="/index.html" />
+        </rule>-->
       </rules>
     </rewrite>
   </system.webServer>
