--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "1.12.4",
+    "jsnlog": "^2.24.0",
     "moment": "^2.18.1",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.12"
