--- a/Angular2webapp/Angular2webapp/packages.config
+++ b/Angular2webapp/Angular2webapp/packages.config
@@ -1,10 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.NLog20" version="3.3.1" targetFramework="net461" />
+  <package id="JSNLog" version="2.24.0" targetFramework="net461" />
+  <package id="JSNLog.NLog" version="2.24.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="NLog" version="4.4.10" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.10" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.10" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
 </packages>
