Serverside logging fixed

--- a/.gitignore
+++ b/.gitignore
@@ -194,7 +194,8 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
-Scripts/
+[Ss]cripts/
+[Ll]cripts/
 orleans.codegen.cs
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
