--- a/Angular2webapp/Angular2webapp/NLog.config
+++ b/Angular2webapp/Angular2webapp/NLog.config
@@ -24,8 +24,11 @@
     -->
 
     <!-- Write events to a file with the date in the filename.-->
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="[${mdc:item=requestId}] ${longdate} ${uppercase:${level:padding=-10}} ${message}" />
+    <target xsi:type="File" name="defaultF" fileName="${basedir}/logs/${shortdate}_default.log"
+            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" />
+
+    <target xsi:type="File" name="clientF" fileName="${basedir}/logs/${shortdate}_client.log"
+            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" />
     
   </targets>
 
@@ -33,7 +36,11 @@
     <!-- add your logging rules here -->
 
     <!-- Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f" -->
-    <logger name="*" minlevel="Trace" writeTo="f" />
+    <logger name="AppLogger" minlevel="Trace" writeTo="clientF" final="true" />
+    
+    <logger name="*" minlevel="Trace" writeTo="defaultF" />
+
+    
    
   </rules>
 </nlog>
