--- a/Angular2webapp/Angular2webapp/packages.config
+++ b/Angular2webapp/Angular2webapp/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="Common.Logging.NLog20" version="3.3.1" targetFramework="net461" />
+  <package id="Common.Logging.NLog41" version="3.3.1" targetFramework="net461" />
   <package id="JSNLog" version="2.24.0" targetFramework="net461" />
   <package id="JSNLog.NLog" version="2.24.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
