--- a/Angular2webapp/Angular2webapp/NLog.config
+++ b/Angular2webapp/Angular2webapp/NLog.config
@@ -4,18 +4,20 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Trace" internalLogFile="c:\temp\angularnlog-internal.log">
+      internalLogLevel="Trace" internalLogFile="c:\temp\nlog-internal.log">
 
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-  <variable name="myvar" value="myvalue"/>
+  <variable name="headerChar" value="-"/>
+  <variable name="systemStr" value="System:"/>
+  <variable name="userStr" value="User:"/>
 
   <!--
   See https://github.com/nlog/nlog/wiki/Configuration-file
   for information on customizing logging rules and outputs.
    -->
-  <targets>
+  <targets async="false">
 
     <!--
     add your targets here
@@ -23,24 +25,32 @@
     See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
     -->
 
-    <!-- Write events to a file with the date in the filename.-->
-    <target xsi:type="File" name="defaultF" fileName="${basedir}/logs/${shortdate}_default.log"
-            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" />
+    <target xsi:type="File" name="defaultF" 
+            fileName="${basedir}/logs/log_default.log" autoFlush="true"
+            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" 
+            header="-0-${headerChar:padCharacter=-:padding=120}${newline}-1- ${var:systemStr:padding=-10}${machinename}${newline}-2- ${var:userStr:padding=-10}${windows-identity}${newline}-3-${headerChar:padCharacter=-:padding=120}"
+            footer="$9{headerChar:padCharacter=-:padding=120}"
+            concurrentWrites="false"
+            archiveFileName="${basedir}/archives/log_default.{#}.txt" 
+            archiveEvery="Hour"
+            archiveDateFormat="yyyyMMdd.HHmm"
+            archiveNumbering="Date" />
 
-    <target xsi:type="File" name="clientF" fileName="${basedir}/logs/${shortdate}_client.log"
-            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" />
+    <target xsi:type="File" name="clientF" 
+            fileName="${basedir}/logs/${shortdate}_client.log"
+            layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" 
+            concurrentWrites="false"/>
     
   </targets>
 
   <rules>
-    <!-- add your logging rules here -->
-
-    <!-- Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f" -->
+    <!-- Write Clientside events to "clientF" -->
     <logger name="AppLogger" minlevel="Trace" writeTo="clientF" final="true" />
-    
-    <logger name="*" minlevel="Trace" writeTo="defaultF" />
 
+    <!-- Test NG_App logger limitting level 
+    <logger name="NG_App" minlevel="Info" writeTo="clientF" final="true" />-->
     
-   
+    <!-- Write all other events to "defaultF" -->
+    <logger name="*" minlevel="Trace" writeTo="defaultF" />
   </rules>
 </nlog>
