--- a/Angular2webapp/Angular2webapp/NLog.config
+++ b/Angular2webapp/Angular2webapp/NLog.config
@@ -29,9 +29,9 @@
             fileName="${basedir}/logs/log_default.log" autoFlush="true"
             layout="${longdate} ${uppercase:${level:padding=-10}} ${message}" 
             header="-0-${headerChar:padCharacter=-:padding=120}${newline}-1- ${var:systemStr:padding=-10}${machinename}${newline}-2- ${var:userStr:padding=-10}${windows-identity}${newline}-3-${headerChar:padCharacter=-:padding=120}"
-            footer="$9{headerChar:padCharacter=-:padding=120}"
+            footer="-9-${headerChar:padCharacter=-:padding=120}"
             concurrentWrites="false"
-            archiveFileName="${basedir}/archives/log_default.{#}.txt" 
+            archiveFileName="${basedir}/logs/archives/log_default.{#}.txt" 
             archiveEvery="Hour"
             archiveDateFormat="yyyyMMdd.HHmm"
             archiveNumbering="Date" />
