--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -38,9 +38,12 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-loader": "^0.4.5",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
     "raw-loader": "^0.5.1",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
+    "to-string-loader": "^1.1.5",
     "typescript": "~2.3.4",
     "webpack": "^2.6.1",
     "webpack-merge": "^4.1.0"
