--- a/Angular2webapp/Angular2webapp/package.json
+++ b/Angular2webapp/Angular2webapp/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --colors",
     "build:vendor": "webpack --config webpack.splitted.vendor.js --colors",
     "build:app": "webpack --config webpack.splitted.app.js --colors",
-    "typings": "typings install"
+    "typings": "typings install",
+    "profile": "webpack --profile --json > stats.json"
   },
   "keywords": [],
   "author": "",
